--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "ws": "^8.18.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/ws": "^8.18.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "react-test-renderer": "18.3.1",
