--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-chat": "^2.8.1",
+    "react-native-keyboard-controller": "^1.16.8",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
