--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.tentesion.Traits_app"
+      "package": "com.traits.Traits_app"
     },
     "web": {
       "bundler": "metro",
