--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
+    "react-native-websocket": "^1.0.2",
     "react-native-webview": "13.12.5",
-    "ws": "^8.18.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
